# python-template-project

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
notebooks/: placeholder.ipynb
