[metadata]
name = Bio-inspired Learning
version = 0.1
author = Alexander Dittrich
author_email = alexander.dittrich@epfl.ch
url = https://github.com/lis-epfl/bioinspired_learning
description = file: README.md
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
